--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   display: grid;
   grid-template-rows: 40px calc(100vh - 40px);
   margin: 0;
-  color: white;
+  /* color: white; */
   font-family: Optima;
 }
 
@@ -11,16 +11,48 @@ header {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: hsl(0, 0%, 25%);
+  /* background-color: hsl(0, 0%, 25%); */
 }
 
 main {
   grid-row: 2;
-  background-color: hsl(0, 0%, 20%);
+  /* background-color: hsl(0, 0%, 20%); */
   overflow: auto;
+  padding: 5px;
+}
+
+h1 {
+  margin: 0;
+  text-align: center;
+}
+
+h2 {
+  margin: 10px 0 0 0;
+  text-align: center;
+}
+
+h3 {
+  font-weight: normal;
+  text-decoration: underline 1px;
+  margin: 15px 0 10px 0;
+  text-align: center;
+  text-underline-offset: 3px;
+}
+
+p {
+  margin: 8px;
 }
 
 a {
-  color: white;
+  color: black;
   text-decoration: none;
+}
+
+span {
+  text-decoration: underline 1px;
+  text-underline-offset: 2px;
+}
+
+#description {
+  text-align: center;
 }
