--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@
   font-family: Inter;
   src: url("./Inter-Thin.ttf");
 }
+
 /* general styling */
 * {
   margin: 0;
   font-weight: normal;
   text-underline-offset: 2px;
+  font-size: 0.9rem;
 }
 
 body {
@@ -30,7 +32,7 @@ header {
   grid-row: 1;
   display: flex;
   justify-content: center;
-  gap: 5%;
+  gap: 7%;
   align-items: center;
 }
 
