--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   font-weight: normal;
   text-underline-offset: 2px;
   font-size: 0.9rem;
+  box-sizing: border-box;
 }
 
 body {
@@ -21,23 +22,15 @@ body {
 
 #container {
   display: grid;
-  grid-template-rows: 40px calc(100vh - 40px);
+  grid-template-rows: 40px calc(100vh - 80px) 40px;
   justify-items: center;
   width: 100%;
-  max-width: 768px;
-}
-
-header {
-  width: 100%;
-  grid-row: 1;
-  display: flex;
-  justify-content: center;
-  gap: 7%;
-  align-items: center;
+  background-color: hsl(200, 100%, 99%);
 }
 
 main {
   width: 100%;
+  max-width: 768px;
   grid-row: 2;
   overflow: auto;
   padding: 5px;
@@ -58,12 +51,6 @@ h3 {
 
 a {
   color: black;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-  text-decoration-thickness: 0.5px;
 }
 
 span {
@@ -85,6 +72,53 @@ span {
   display: none;
 }
 
+/* header / footer / nav styles */
+
+header {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  grid-row: 1;
+  background-color: hsl(200, 100%, 95%);
+}
+
+#header-nav {
+  width: 100%;
+  height: 100%;
+  max-width: 768px;
+  display: flex;
+  justify-content: center;
+  gap: 7%;
+  align-items: center;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  grid-row: 3;
+  background-color: hsl(200, 100%, 95%);
+}
+
+#footer-nav {
+  width: 100%;
+  max-width: 768px;
+  display: flex;
+  justify-content: center;
+  gap: 25%;
+  align-items: center;
+  background-color: hsl(200, 100%, 95%);
+}
+
+.nav-link {
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 0.5px;
+}
+
 /* about section */
 #about {
   display: grid;
@@ -93,10 +127,16 @@ span {
 /* profile section */
 #profile {
   display: grid;
+  gap: 5px;
+  margin-bottom: 10px;
 }
 
 #profile h1 {
   text-align: center;
+}
+
+#profile button {
+  margin: 5px 0px;
 }
 
 #profile-pic {
