--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Inter;
-  src: url("./Inter-Thin.ttf");
+  src: url("./Inter-ExtraLight.ttf");
 }
 
 /* general styling */
