--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ strong {
 
 * {
   margin: 0;
+  font-weight: normal;
   text-underline-offset: 2px;
   box-sizing: border-box;
   scroll-behavior: smooth;
